--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: 1.18
 
       - name: Install dependencies
-        run: make deps
+        run: make build
 
       - name: Test
         run: make test
