--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,20 @@
 name: Make release
 
 on:
-  push:
-    tags:
-    - '*'
+  push: {}
+
+# on:
+#   push:
+#     tags:
+#     - '*'
 
 jobs:
   release:
+    strategy:
+      matrix:
+        platform-arch: [ubuntu-latest, macos-latest]
 
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.platform-arch }}
     steps:
       - uses: actions/checkout@v3
 
@@ -19,7 +24,7 @@ jobs:
           go-version: 1.18
 
       - name: Make release
-        run: make rel
+        run: PLATFORM=${{ matrix.platform-arch }} make rel
 
       - name: Create Release
         id: create_release
@@ -32,24 +37,13 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Darwin binary
-        id: upload-darwin-release-asset
+      - name: Upload binary
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./await-darwin-amd64
-          asset_name: await-darwin-amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Linux binary
-        id: upload-linux-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./await-linux-amd64
-          asset_name: await-linux-amd64
+          asset_path: ./await-${{ matrix.platform-arch }}
+          asset_name: await-${{ matrix.platform-arch }}
           asset_content_type: application/octet-stream
